:art: Fix home component image on smaller devices

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -13,3 +13,10 @@
         width: 350px;
     }
 }
+
+@media screen and (max-width: 350px) {
+    .home-hero-wrapper .brand-logo {
+        top: 70px;
+        width: 280px;
+    }
+}
